<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorDbBackground"
    android:focusedByDefault="true">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/white"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_deposit_money"/>

                <include layout="@layout/divider"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtPaymentAmountWrap"
                    android:layout_marginTop="@dimen/inputs_margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPaymentAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_payment_amount"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtPaymentPoneWrap"
                    android:layout_marginTop="@dimen/inputs_margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPaymentPone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:layout_marginTop="@dimen/primary_btn_margin"
                    android:id="@+id/btnPaymentMakePayment"
                    android:layout_gravity="center"
                    style="@style/ButtonSquareGreenBorder"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/label_payment_pay"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>
