<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:label="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/padding_eight"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="One time PIN verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="left"
                android:text="@string/label_message_otp_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                >
                <EditText android:id="@+id/edtOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Enter one time PIN" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_weight="1"
                    android:background="@color/primary_dark"
                    android:id="@+id/btnConfirmOtp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:onClick="btnConfirmOtp"
                    android:padding="12dp"
                    android:text="@string/label_confirm" />

                <Button
                    android:layout_weight="1"
                    android:background="@drawable/rounded_view"
                    android:id="@+id/btnCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/colorDashboardIcons"
                    android:layout_marginBottom="24dp"
                    android:onClick="btnCancelClick"
                    android:padding="12dp"
                    android:text="@string/label_cancel" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

