<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
tools:context=".components.auth.login.verification.LoginPage">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/gradient_bg" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:padding="@dimen/padding_sixteen"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:background="@color/colorPrimaryTransparent"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/card_padding"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--<ImageView-->
                    <!--android:layout_width="@dimen/height_48"-->
                    <!--android:layout_height="@dimen/height_48"-->
                    <!--android:src="@drawable/ic_account_circle_success"/>-->
                    <TextView
                        android:layout_margin="@dimen/padding_eight"
                        android:padding="@dimen/padding_eight"
                        android:background="@drawable/bg_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/label_account_verification"/>

                    <!--<com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/txvCustomerReferenceNo"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/dp_3"
                        android:lines="1"
                        app:bootstrapSize="md"
                        app:bootstrapBrand="info"
                        app:roundedCorners="true"
                        android:hint="@string/hint_reference_number"
                        />-->

                    <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="@dimen/margin_edit"
                        android:layout_width="match_parent"
                        android:textColorHint="#fff"
                        android:layout_height="wrap_content"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txvCustomerReferenceNo"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_reference_number"
                            android:textColor="@color/md_white_1000"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/checkBoxRememberMe"
                        android:layout_marginBottom="@dimen/margin_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/label_remember_me"/>

                    <Button
                        android:id="@+id/btnVerifyReferenceNumber"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        style="@style/ButtonSquareAccentBorder"
                        android:layout_marginTop="@dimen/padding_sixteen"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:text="@string/label_verify"/>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>


    </FrameLayout>

</LinearLayout>

</LinearLayout>

