<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".components.otp.otpverification.OtpVerification">

<include
    android:id="@+id/toolbar"
    layout="@layout/toolbar"/>

<ScrollView
    android:layout_below="@id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_verified"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:gravity="center"
                android:text="Enter one time PIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txvPinInfo"
                android:gravity="center"
                android:text="@string/pin_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <EditText android:id="@+id/edtPIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Enter 4 digit PIN" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:background="@color/primary_dark"
                android:id="@+id/btnConfirmOtp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:onClick="btnConfirm"
                android:padding="12dp"
                android:text="@string/label_verify_pin" />

            <Button
                android:textStyle="normal"
                android:layout_weight="1"
                android:background="@drawable/rounded_view"
                android:id="@+id/btnCancel"
                android:textColor="@color/colorDashboardIcons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="btnCancelClick"
                android:padding="12dp"
                android:text="@string/label_cancel" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

</RelativeLayout>